# MoePet

./: .gitignore  CONTINUITY.md  PRD.md  README.md
.github/workflows/: release.yml
.pet-data-template/: AGENTS.md  config.md
docs/: development-workflow.md  product-spec.md
moe-pet/: index.html  package.json
moe-pet/src/: main.ts  style.css
moe-pet/src-tauri/: Cargo.toml  tauri.conf.json
moe-pet/src-tauri/src/: lib.rs  main.rs
scripts/: process-spritesheet-v4.py
src/: behavior.js  brain.js  bubble.js  context-menu.js  main.js
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src/__tests__/: behavior.test.js  brain.test.js  characters.test.js  tauri-capabilities.test.js
